@@ -1,5 +1,6 @@
 Revision history for Web::Components
 
+          - Added tests and POD
           - Works with App::Doh
 
 0.1.1     2015-08-14 01:20:58
